--- a/index.html
+++ b/index.html
@@ -1,39 +1,40 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Calculator</title>
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
-        <link href="style.css" rel="stylesheet"/> 
-    </head>
-    <body>
-        <section class="calculator">
-            <div class="calculator_wrapper">
-                <div class="display"><span class="num_wrapper blink">0123</span></div>
-                <button class="orange">AC</button>
-                <button class="blue">+/-</button>
-                <button class="blue">%</button>
-                <button class="blue">&#x232b;</button>
-                <button class="white">7</button>
-                <button class="white">8</button>
-                <button class="white">9</button>
-                <button class="grey">÷</button>
-                <button class="white">4</button>
-                <button class="white">5</button>
-                <button class="white">6</button>
-                <button class="grey">×</button>
-                <button class="white">1</button>
-                <button class="white">2</button>
-                <button class="white">3</button>
-                <button class="grey">-</button>
-                <button class="white">0</button>
-                <button class="white">.</button>
-                <button class="grey">=</button>
-                <button class="grey">+</button>
-            </div> 
-        </section> 
-        <script src="script.js"></script> 
-    </body>
-</html> 
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Calculator</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+    <link href="style.css" rel="stylesheet" />
+  </head>
+  <body>
+    <section class="calculator">
+      <div class="calculator_wrapper">
+        <div class="display"><span class="num_wrapper blink"></span></div>
+
+        <button id="ac" class="orange">AC</button>
+        <button id="perc" class="blue">%</button>
+        <button id="plusminus" class="blue">+/-</button>
+        <button id="backspace" class="blue">&#x232b;</button>
+        <button id="7" data-num="7" class="white">7</button>
+        <button id="8" data-num="8" class="white">8</button>
+        <button id="9" data-num="9" class="white">9</button>
+        <button id="div" data-operator="div" class="grey">÷</button>
+        <button id="4" data-num="4" class="white">4</button>
+        <button id="5" data-num="5" class="white">5</button>
+        <button id="6" data-num="6" class="white">6</button>
+        <button id="mul" data-operator="mul" class="grey">×</button>
+        <button id="1" data-num="1" class="white">1</button>
+        <button id="2" data-num="2" class="white">2</button>
+        <button id="3" data-num="3" class="white">3</button>
+        <button id="sub" data-operator="sub" class="grey">-</button>
+        <button id="0" data-num="0" class="white">0</button>
+        <button id="dot" class="white">.</button>
+        <button id="equal" class="grey equal">=</button>
+        <button id="add" data-operator="add" class="grey">+</button>
+      </div>
+    </section>
+    <script src="script.js"></script>
+  </body>
+</html>
