change effects of pressing buttons and add new font family

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Calculator</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=VT323&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap"
       rel="stylesheet"
     />
     <link href="style.css" rel="stylesheet" />
@@ -17,9 +19,9 @@
         <div class="display"><span class="num_wrapper blink"></span></div>
 
         <button id="ac" class="orange">AC</button>
+        <button id="backspace" class="blue">&#9003;</button>
         <button id="perc" class="blue">%</button>
         <button id="plusminus" class="blue">+/-</button>
-        <button id="backspace" class="blue">&#x232b;</button>
         <button id="7" data-num="7" class="white">7</button>
         <button id="8" data-num="8" class="white">8</button>
         <button id="9" data-num="9" class="white">9</button>
